Fixed missing backdrop blur on Safari. Reduced padding around medium-viewport blog-about section.

--- a/Application/SparkServerLite/wwwroot/css/site.css
+++ b/Application/SparkServerLite/wwwroot/css/site.css
@@ -65,7 +65,7 @@ h6 { font-size: 1.45em; }
 .blog-card .date { font-size: 0.85em; }
 
 .blog-banner { background-size: cover; background-position: center; height: 250px; position: relative; border-radius: 4px; }
-.blog-banner h1 { font-size: 2em; margin: 0; line-height: 1.25em; position: absolute; bottom: 0px; backdrop-filter: blur(18px); color: #FFF; padding: 0.5em 0.5em; text-shadow: 2px 2px 2px #000; background-color: rgba(0, 0, 0, 0.25); border-bottom-left-radius: 4px; border-top-right-radius: 4px;}
+.blog-banner h1 { font-size: 2em; margin: 0; line-height: 1.25em; position: absolute; bottom: 0px; backdrop-filter: blur(18px); -webkit-backdrop-filter: blur(18px); color: #FFF; padding: 0.5em 0.5em; text-shadow: 2px 2px 2px #000; background-color: rgba(0, 0, 0, 0.25); border-bottom-left-radius: 4px; border-top-right-radius: 4px;}
 
 .blog-about { margin: 1em auto; max-width: 500px; padding: 1em; text-align: left; columns: 2; }
 .blog-about .item { margin-bottom: 1em; }
@@ -174,15 +174,15 @@ footer a:hover { color: #FFF; }
 	.blog-card .image-preview { margin: 0 1em 0 0; height: auto; }
 	.blog-card .overview { grid-column: 2; text-align: left; padding: 1.5em 1em; }
 	
-	.blog-about { min-width: 375px; margin: 0 auto 4em auto; padding: 2em; border: 1px solid #AAA; border-radius: 6px; }
+	.blog-about { min-width: 375px; margin: 0 auto 2em auto; padding: 2em; border: 1px solid #AAA; border-radius: 6px; }
 
 	.blog-banner { height: 475px; }
 	.blog-banner h1 { font-size: 3em; }
 
-	article.blog { padding: 5em; font-size: 1.1em; line-height: 1.15em; margin-bottom: 2em; }
+	article.blog { padding: 2em 5em 5em 5em; font-size: 1.1em; line-height: 1.15em; margin-bottom: 2em; }
 	article.blog h1 { font-size: 3em; text-align: left; padding: 0; }
 	article.blog p { font-size: 1em; line-height: 1.75em; max-width: 650px; }
-	article.blog ul, article.blogol { font-size: 1em; }
+	article.blog ul, article.blog ol { font-size: 1em; }
 
 	.status-message { max-width: 600px; padding: 2em; line-height: 1.5em; }
 
